# dnd_spellbook_maker

./: .gitignore  Cargo.toml  LICENSE  README.md  spell_json_formatting.md
fonts/Bookman/: info.txt
spells/necronomicon/: hell_spell.json  hell_spell.spell  power_word_scrunch.json  power_word_scrunch.spell  the_ten_hells.json  the_ten_hells.spell
spells/phb/: acid_splash.txt  aid.txt  alter_self.txt  antilife_shell.txt  cloud_of_daggers.txt  confusion.txt  control_weather.txt  cordon_of_arrows.txt  counterspell.txt  fire_bolt.txt  magic_missile.txt  mending.txt  scorching_ray.txt  unseen_servant.txt
spells/players_handbook/: alarm.spell  animal_friendship.spell  animal_messenger.spell  animal_shapes.spell  animate_objects.spell  antilife_shell.spell  antimagic_field.spell  antipathy_sympathy.spell  arcane_eye.spell  arcane_lock.spell  arms_of_hadar.spell  augury.spell  aura_of_life.spell  aura_of_purity.spell  banishing_smite.spell  banishment.spell  beacon_of_hope.spell  bestow_curse.spell  bigbys_hand.spell  bless.spell  blight.spell  blinding_smite.spell  blindness_deafness.spell  blur.spell  burning_hands.spell  call_lightning.spell  calm_emotions.spell  charm_person.spell  circle_of_power.spell  clairvoyance.spell  clone.spell  cloudkill.spell  color_spray.spell  command.spell  commune_with_nature.spell  compelled_duel.spell  comprehend_languages.spell  cone_of_cold.spell  confusion.spell  conjure_animals.spell  (+163 more)
spells/players_handbook_2014/: acid_splash.json  acid_splash.spell  aid.json  alarm.json  alter_self.json  animal_friendship.json  animal_messenger.json  animal_shapes.json  animate_dead.json  animate_dead.spell  animate_objects.json  antilife_shell.json  antilife_shell.spell  antimagic_field.json  antimagic_field.spell  antipathy_sympathy.json  antipathy_sympathy.spell  arcane_eye.json  arcane_gate.json  arcane_gate.spell  arcane_lock.json  armor_of_agathys.json  armor_of_agathys.spell  arms_of_hadar.json  astral_projections.json  astral_projections.spell  augury.json  augury.spell  aura_of_life.json  aura_of_purity.json  aura_of_purity.spell  awaken.json  awaken.spell  bane.json  bane.spell  banishing_smite.json  banishment.json  barkskin.json  barkskin.spell  beacon_of_hope.json  (+483 more)
spells/players_handbook_2024/: acid_splash.json  aid.json  alarm.json  alter_self.json  animal_friendship.json  animal_messenger.json  animal_shapes.json  animate_dead.json  animate_objects.json  antilife_shell.json  antimagic_field.json  antipathy_sympathy.json  arcane_eye.json  arcane_gate.json  arcane_lock.json  arcane_vigor.json  armor_of_agathys.json  arms_of_hadar.json  astral_projection.json  augury.json  aura_of_life.json  awaken.json  (+372 more)
src/: lib.rs  old_lib.rs  phb_spells.rs  spellbook_gen_types.rs  spellbook_options.rs  spellbook_writer.rs  spells.rs  tests.rs  utils.rs
(+243 files in other folders)
