[package]
name = "dnd_spellbook_maker"
version = "1.0.0"
authors = ["Chandler Calkins <chandlerjaycalkins@gmail.com>"]
edition = "2021"
description = "Library for making pdf documents of spells that ressemble 5th edition D&D official source book spell descriptions."
readme = "README.md"
documentation = "https://docs.rs/dnd_spellbook_maker"
repository = "https://github.com/ChandlerJayCalkins/dnd_spellbook_maker"
homepage = "https://github.com/ChandlerJayCalkins/dnd_spellbook_maker"
license = "MIT"
keywords = ["dnd", "spells", "spells", "spellbook"]
exclude = ["spells", "fonts", "img"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
image = { version = "0.24.7" }
printpdf = { version = "0.6.0", features = ["embedded_images"] }
rusttype = { version = "0.9.3" }
