[package]
name = "dnd_spellbook_maker"
version = "0.6.0"
authors = ["Chandler Calkins <chandlerjaycalkins@gmail.com>"]
edition = "2021"
description = "Library for making pdf documents of 5th edition D&D spells that are formatted like D&D source books."
readme = "README.md"
documentation = "https://docs.rs/dnd_spellbook_maker"
repository = "https://github.com/ChandlerJayCalkins/dnd_spellbook_maker"
homepage = "https://github.com/ChandlerJayCalkins/dnd_spellbook_maker"
license = "MIT OR Apache-2.0 OR GPL-3.0-or-later"
keywords = ["dnd", "spells", "spells", "spellbook"]
exclude = ["spells", "fonts", "img"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
printpdf = { version = "0.8.2", features = ["gif", "jpeg", "png", "pnm", "tiff", "bmp", "ico", "tga", "hdr", "dds", "webp", "rayon"] }
rusttype = { version = "0.9.3" }
regex = { version = "1.11.1" }
# function-timer = { version = "0.9.0" }
# metrics-exporter-prometheus = { version = "0.16.0" }
